--- a/package/zerobias/example-angular/src/app/app.component.html
+++ b/package/zerobias/example-angular/src/app/app.component.html
@@ -86,116 +86,12 @@
 </div>
 
 <div class="content-wrap">
-  <style type="text/css">
-    body {
-      padding:0;
-      margin:0;
-      background: #03aff00d;
-      background: radial-gradient(ellipse at top left, rgba(3, 175, 240, .1), transparent, transparent);
-      background-repeat: no-repeat;
-      background-attachment: scroll;
-      background-position: center;
-      font-family: Roboto, sans-serif;
-      font-size: 14px;
-      line-height: 20px;
-    }
-    .content-wrap {
-      padding: 0 8%;
-    }
-    .toolbar {
-      display: flex;
-      box-sizing: border-box;
-      width: 100%;
-      flex-direction: column;
-      align-items: flex-start;
-      white-space: nowrap;
-      height: 68px;
-      background: #000;
-      gap: 8px;
-      padding: 0;
-      justify-content: flex-end;
-      min-height: 64px;
-    }
-    .app-bar {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      gap: 8px;
-      flex-grow: 1;
-      justify-content: flex-end;
-      margin: 0px 16px 0;
-      padding: 8px 0 0;
-      width: calc(100% - 32px);
-    }
-    .app-bar h1 {
-      font-family: Montserrat, sans-serif;
-      color: #fff;
-      max-width: 200px;
-      min-width: 100px;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      overflow: hidden;
-      font-size: 16px;
-      font-weight: 500;
-      line-height: 22px;
-      min-width: 500px;
-      padding: 0 16px;
-    }
-    .zerobias-bar {
-      background: #03aff0;
-      background: linear-gradient(90deg, #03aff0 25%, #232323 75%);
-      width: 100%;
-      height: 4px;
-      position: absolute;
-    }
-
-    .avatar-text-wrapper span.avatar-label-label {
-      font-size: 14px;
-      line-height: 1.3;
-      font-weight: 400;
-    }
-
-    .user-icon-dropdown {
-      margin-top: 5px;
-    }
-
-    .user-dropdown {
-      display: flex;
-      border-left: 1px solid #333;
-      padding-left: 25px;
-    }
-
-    .user-switcher-dropdown {
-      position: absolute;
-      top: 600px;
-      width: 200px;
-    }
-
-    .user-dropdown-list {
-      position: absolute;
-      top: 46px;
-      right: -20px;
-      width: 240px;
-    }
-
-    .user-dropdown-list .mat-mdc-option {
-      padding-left: 0;
-    }
-
-    .arrow_drop_down {
-      width: 0; 
-      height: 0; 
-      border-left: 4px solid transparent;
-      border-right: 4px solid transparent;
-      border-top: 4px solid rgb(32, 32, 32);
-    }
-
-  </style>
   <div class="content-wrapper flex-column gap16">
 
-    <div class="demo-item">
+    <div class="demo-item" flexColumn>
       <h2>Catalog Products Example</h2>
       <p>This example calls the ZeroBias Catalog API <code>clientApi.portalClient.getProductApi().search()</code> endpoint to get a list of 5 products from the ZeroBias Catalog</p>
+      
       <table class="table">
         <tr class="product-item">
           <th>Logo</th>
@@ -217,34 +113,45 @@
         }
 
       </table>
-      <div class="pagination-wrap">
-
+      <div class="pagination-wrap" flexRow gap4>
+        @if(productsPageStateExample.count > 0) {
+          <!-- if we have records -->
+          <button class="prev-link" (click)="onPageChange($event)" [disabled]="productsPageStateExample.pageNumber < 2">&lt;</button>
+          @for(num of productsPageNumbers; track num) {
+            @if (num === productsPageStateExample.pageNumber) {
+              <span class="pagination-link current">{{num}}</span>
+            } @else {
+              <span class="pagination-link" (click)="getProducts(num)" style="cursor: pointer;">{{num}}</span>
+            }
+          }
+          <button class="next-link" (click)="onPageChange($event)" [disabled]="productsLastPage > 0">&gt;</button>
+        }
       </div>
     </div>
 
     <div class="demo-item">
       <h2>Principal Key-Value Example</h2>
-      <p>This example calls the ZeroBias Key-Value API <code>clientApi.danaClient.getPkvApi()</code> endpoint to manipulate the storage of key-value pairs</p>
+      <p>This example calls the ZeroBias Principal Key-Value API <code>clientApi.danaClient.getPkvApi()</code> endpoint to manipulate the storage of key-value pairs</p>
       <button (click)="showAddPkv = showAddPkv ? false : true">+ add</button>
 
       @if(showAddPkv) {
         <hr class="small">
         <h3>Create KV Pair</h3>
-        <div class="new-pkv-form" flexColumn gap16>
+        <div class="new-pkv-form" flexColumn gap4>
 
           <div flexRow gap16>
 
             <div class="form-field-wrap">
-              <span class="label">Key</span>
+              <span class="label">Key:</span>
               <div>
-                <input [formControl]="kvFormGroup.get('key')" placeholder="" autocomplete="off" />
+                <input [formControl]="kvFormGroup.get('key')" placeholder="" autocomplete="off" style="min-width: 150px;"/>
               </div>
             </div>
 
             <div class="form-field-wrap">
-              <span class="label">Value</span>
+              <span class="label">Value:</span>
               <div>
-                <textarea [formControl]="kvFormGroup.get('value')" placeholder="{}" autocomplete="off">{{kvFormGroup.get('value').value}}</textarea>
+                <textarea style="width: 250px; height: 85px;" [formControl]="kvFormGroup.get('value')" placeholder="{}" autocomplete="off">{{kvFormGroup.get('value').value}}</textarea>
               </div>
             </div>
 
@@ -282,11 +189,11 @@
 
           @for(item of pagedKvPairs; track item) {
             <li role="listitem">
-              <div class="text-wrapper" flexRow gap4 style="flex-wrap: wrap; align-items: stretch; flex-grow: 1;">
-                <span class="label colon" flexRow style="align-self: flex-start;flex-basis: 175px; font-size: 14px; align-items: center; flex-wrap: wrap;">
+              <div class="text-wrapper" flexRow gap4>
+                <span class="label colon" flexRow>
                     <span>{{item.key}}</span>
                 </span>
-                <span class="text" style="flex-basis: 65%; font-size: 14px; word-break: break-word;">
+                <span class="text">
                   {{item.value|toString:false:64:'json'}}
                 </span> 
               </div>
