--- a/package/zerobias/example-angular/src/app/app.component.scss
+++ b/package/zerobias/example-angular/src/app/app.component.scss
@@ -651,10 +651,162 @@ button {
   }
 }
 
+.pagination-wrap {
+  padding-top: 8px;
+  align-self: flex-end;
+
+  .pagination-link {
+    cursor: pointer;
+    line-height: 34px;
+    padding: 0 8px;
+    background: #efefef;
+    border: 1px solid #efefef;
+
+    &:hover {
+      background-color: #fff;
+      border: 1px solid #03aff0;
+    }
+
+    &.current {
+      cursor: default;
+      font-weight: bold;
+      background: #03aff036;
+    }
+
+    &.current:hover {
+      background: #03aff036;
+    }
+  }
+}
+
+.pkv-container {
+  ul li {
+    .text-wrapper {
+      flex-wrap: wrap; 
+      align-items: stretch; 
+      flex-grow: 1;
+    
+      .label.colon {
+        align-self: flex-start;
+        flex-basis: 175px; 
+        font-size: 14px; 
+        align-items: center; 
+        flex-wrap: wrap;
+      }
+      .text {
+        flex-basis: 65%; 
+        font-size: 14px; 
+        word-break: break-word;
+      }
+    }
+  }
+}
+
+body {
+  padding:0;
+  margin:0;
+  background: #03aff00d;
+  background: radial-gradient(ellipse at top left, rgba(3, 175, 240, .1), transparent, transparent);
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center;
+  font-family: Roboto, sans-serif;
+  font-size: 14px;
+  line-height: 20px;
+}
+.content-wrap {
+  padding: 0 8%;
+}
+.toolbar {
+  display: flex;
+  box-sizing: border-box;
+  width: 100%;
+  flex-direction: column;
+  align-items: flex-start;
+  white-space: nowrap;
+  height: 68px;
+  background: #000;
+  gap: 8px;
+  padding: 0;
+  justify-content: flex-end;
+  min-height: 64px;
+}
+.app-bar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 8px;
+  flex-grow: 1;
+  justify-content: flex-end;
+  margin: 0px 16px 0;
+  padding: 8px 0 0;
+  width: calc(100% - 32px);
+}
+.app-bar h1 {
+  font-family: Montserrat, sans-serif;
+  color: #fff;
+  max-width: 200px;
+  min-width: 100px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 22px;
+  min-width: 500px;
+  padding: 0 16px;
+}
+.zerobias-bar {
+  background: #03aff0;
+  background: linear-gradient(90deg, #03aff0 25%, #232323 75%);
+  width: 100%;
+  height: 4px;
+  position: absolute;
+}
+
+.avatar-text-wrapper span.avatar-label-label {
+  font-size: 14px;
+  line-height: 1.3;
+  font-weight: 400;
+}
+
+.user-icon-dropdown {
+  margin-top: 5px;
+}
+
+.user-dropdown {
+  display: flex;
+  border-left: 1px solid #333;
+  padding-left: 25px;
+}
+
+.user-switcher-dropdown {
+  position: absolute;
+  top: 600px;
+  width: 200px;
+}
+
+.user-dropdown-list {
+  position: absolute;
+  top: 46px;
+  right: -20px;
+  width: 240px;
+}
+
+.user-dropdown-list .mat-mdc-option {
+  padding-left: 0;
+}
+
+.arrow_drop_down {
+  width: 0; 
+  height: 0; 
+  border-left: 4px solid transparent;
+  border-right: 4px solid transparent;
+  border-top: 4px solid rgb(32, 32, 32);
+}
+
 
 /* for styled select */
-
-
 select {
   -webkit-appearance: none;
     -moz-appearance: none;
