chore: move styles

--- a/package/zerobias/example-nextjs/styles/styles.scss
+++ b/package/zerobias/example-nextjs/styles/styles.scss
@@ -1,6 +1,6 @@
 @use "material-symbols";
-@use '../styles/cdk-overlay-container.scss';
-@use '../styles/cdk-text-field.scss';
+@use './cdk-overlay-container.scss';
+@use './cdk-text-field.scss';
 
 *,
 *::before,
