--- a/package/zerobias/example-nextjs/styles/styles.scss
+++ b/package/zerobias/example-nextjs/styles/styles.scss
@@ -972,6 +972,115 @@ button {
 
 }
 
+.demo-items-wrapper {
+
+  h2 {
+    display: block;
+    border-bottom: 1px solid rgba(0, 0, 0, .12);
+    font-size: 24px;
+    height: 30px;
+    width: 100%;
+    font-weight: 400;
+    font-family: Montserrat, sans-serif;
+  }
+
+  .demo-item {
+    font-family: Montserrat, sans-serif;
+    flex: 0 0 32%;
+    max-width: 600px;
+    border: 1px solid rgba(0,0,0,.12);
+    border-radius: 6px;
+    padding: 12px;
+    font-size: 22px;
+    font-weight: 500;
+    min-width: 250px;
+    box-shadow: 8px 8px 16px -6px #0000001a;
+    border-radius: 5px;
+    transition: box-shadow .13s linear, transform .13s linear;
+
+
+    &:hover {
+      transform: translate(-2px) translateY(-2px);
+      box-shadow: 8px 8px 16px -4px #0000004d;
+    }
+
+    .item-header {
+      height: 64px;
+      font-size: 22px;
+      font-weight: 500;
+      white-space: nowrap;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      padding: 8px 16px 0;
+      box-sizing: border-box;
+      a {
+        color: #333;
+        text-decoration: none;
+        display: flex;
+        gap: 16px;
+        line-height: 48px;
+
+        &:hover {
+          color: var(--action-color-primary-hover);
+        }
+      }
+      span.item-title {
+        font-size: 24px;
+        line-height: 48px;
+      }
+      
+    }
+
+    .item-subtitle {
+      font-size: 16px;
+      font-weight: 400;
+      text-align: left;
+      min-height: 40px;
+      padding: 0 16px;
+    }
+
+    .item-actions {
+      justify-items: flex-end;
+    }
+
+
+
+    button.launch-btn {
+      border: 1px solid rgba(0, 0, 0, .12);
+      box-shadow: none;
+      border-radius: 10px;
+      text-transform: none;
+      font-size: 12px;
+      padding: 6px 16px;
+      color: #000000de;
+      background-color: #fff;
+      position: relative;
+      text-decoration: none;
+      font-weight: 400;
+      display: flex;
+      gap: 4px;
+      align-items: center;
+
+      a {
+        height: 15px;
+        line-height: 15px;
+        text-decoration: none;
+        color: inherit;
+        vertical-align: middle;
+      }
+
+      &:hover {
+        color: var(--action-color-primary-hover);
+        border-color: var(--action-color-primary-hover);
+      }
+    }
+    p {
+      font-size: 16px;
+    }
+  }
+}
 
 .content-wrapper .demo-item {
   width: 100%;
